--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Artefak Gacor</title>
+    <title>NFT Shop Gacor</title>
     <style>
         /* Style your artifact display as you see fit, dear Traveler. */
         body {
@@ -22,6 +22,8 @@
 </head>
 <body>
     <div class="artifact-info">
+        <h3>Nama : {{siswa}}</h3>
+        <h3>Kelas : {{kelas}}</h3>
         <h1>NFTshop </h1>
         <img src="{{img}}" height="300px" width="300px" alt="valued at 10000000 USD">
         <p>Name: {{name}}</p>
