--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,7 +1,55 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block content %}
-<h1>List Your NFT</h1>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+    }
+    h1 {
+        color: #333366;
+        margin-bottom: 20px;
+    }
+    form {
+        border: 1px solid #ccc;
+        padding: 20px;
+        width: 300px;
+        margin: auto;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    table {
+        width: 100%;
+    }
+    td {
+        padding: 10px;
+    }
+    input[type="submit"] {
+        background-color: #4CAF50;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+    input[type="text"],
+    input[type="number"],
+    input[type="email"],
+    select,
+    textarea {
+        width: 100%;
+        padding: 8px;
+        margin: 4px 0;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+    }
+</style>
+
+<center><h1>List Your NFT</h1></center>
+
+
 
 <form method="POST">
     {% csrf_token %}
